--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,16 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        android:src="@android:drawable/btn_plus"
-        app:fabSize="normal"
-        app:layout_anchor="@id/main_container"
-        app:layout_anchorGravity="bottom|right|end"
-        app:layout_behavior="blankthings.raincheckmvp.ui.FabScrollBehavior"
-        />
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="bottom|end"-->
+        <!--android:layout_margin="16dp"-->
+        <!--android:src="@android:drawable/btn_plus"-->
+        <!--app:fabSize="normal"-->
+        <!--app:layout_anchor="@id/main_container"-->
+        <!--app:layout_anchorGravity="bottom|right|end"-->
+        <!--app:layout_behavior="blankthings.raincheckmvp.ui.FabScrollBehavior"-->
+        <!--/>-->
 
 </android.support.design.widget.CoordinatorLayout>
